<resources>
    <string name="app_name">Sao Longuinho</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    //STRING PARA O APP
    <string name="descricaoDocumento">CNH - RG - CPF - TÍTULO DE ELEITOR - RESERVISTA</string>
    <string name="descricaoDocVeiculo">CRLV - RECIBO</string>
    <string name="descricaoDocCartao">TODOS OS TIPOS DE CARTÕES, CARTEIRINHA DE ESCOLA, CARTÃO DE ÔNIBUS</string>
    <string name="cartao">Cartão</string>
    <string name="documento">Documento</string>
    <string name="documentoVeiculo">Documento Veiculo</string>
    <string name="sobre2">A perda de um objeto ou algo de valor pode causar grande prejuízo
e diversos transtornos. Muitas vezes quem encontra um objeto tem dificuldade
em devolvê-lo ao dono. Da mesma maneira, quem perdeu algo também sente
a necessidade de informar a perda na expectativa de encontrar o objeto. O
aplicativo São Longuinho permite cadastrar objetos perdidos e encontrados e
        compartilhar as informações para facilitar o retorno de itens perdidos.</string>

    <string-array name="menu">
        <item>RG</item>
        <item>CPF</item>
        <item>Catão</item>
        <item>CRLV</item>
        <item>CNH</item>
        <item>Carteira de Trabalho</item>
        <item>Reservista</item>
    </string-array>

    <string-array name="menuAcheiCartao">
        <item>BANCO</item>
        <item>MEDICO</item>
        <item>ODONTOLOGICO</item>
        <item>CREDITO</item>
        <item>CRACHÁ</item>
    </string-array>

    <string-array name="menuAcheiVei">
        <item>RECIBO</item>
        <item>CRLV</item>
    </string-array>

    <string-array name="menuAcheiDoc">
        <item>RG</item>
        <item>CPF</item>
        <item>CNH</item>
        <item>TITULO DE ELEITOR</item>
        <item>RESERVISTA</item>
    </string-array>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Achei</string>
    <string name="menu_slideshow">Carteira</string>
    <string name="menu_tools">Meus Itens</string>
    <string name="menu_share">Sobre</string>
    <string name="menu_notificacao">Notificação</string>
    <string name="menu_send">Sair</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="cpf">CPF</string>
    <string name="rg">RG</string>
    <string name="data_nascimento">Data Nascimento</string>
    <string name="nome_da_mae">Nome da Mãe</string>
    <string name="sair">Sair</string>
    <string name="adicionar">Adicionar</string>
    <string name="configuracao">Configurações</string>
    <string name="sobre">Sobre</string>
    <string name="achei">Achei</string>
    <string name="carteira">Carteira</string>
    <string name="tipo">Tipo:</string>
    <string name="descri_o">Descrição</string>
    <string name="longuinho">Longuinho</string>
    <string name="nome_como_esta_no_cart_o">Nome como esta no cartão</string>
    <string name="naturalidade">Naturalidade</string>
    <string name="data_que_voce_encontrou">Data Que Você Encontrou</string>
    <string name="comentario">Comentario</string>
    <string name="traco">|</string>
</resources>
