<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonDocumento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/documento"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="25sp"
            android:background="@drawable/bacground_button"
            android:textColor="@color/colorBranco"/>

        <TextView
            android:id="@+id/textViewDoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descricaoDocumento"
            android:textSize="20sp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:textColor="@color/colorBranco"
            />

        <Button
            android:id="@+id/buttonDocVeiculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/documentoVeiculo"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="25sp"
            android:textAlignment="center"
            android:background="@drawable/bacground_button"
            android:textColor="@color/colorBranco"/>

        <TextView
            android:id="@+id/textViewDocVei"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descricaoDocVeiculo"
            android:textSize="20sp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:textColor="@color/colorBranco"/>

        <Button
            android:id="@+id/buttonCartao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cartao"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="25sp"
            android:background="@drawable/bacground_button"
            android:textColor="@color/colorBranco"/>

        <TextView
            android:id="@+id/textViewCartao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descricaoDocCartao"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorBranco"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>