<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.AcheiDocumentoActivity">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/documento"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/colorBranco"

                   />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp">



                    <TextView
                        android:id="@+id/textViewti"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tipo"
                        android:textSize="20sp"
                        android:textColor="@color/colorBranco"
                        android:textAlignment="textStart"
                        />
                    <Spinner
                        android:id="@+id/spinnerAcheiDoc"
                        android:scrollbarSize="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        />

                </LinearLayout>


                <EditText
                    android:id="@+id/editTextDocNomeCompleto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/colorBranco"
                    android:textColorHint="@color/colorBranco"
                    android:inputType="textPersonName"
                    android:hint="@string/nome_completo"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                   />

                <EditText
                    android:id="@+id/editTextDocCpf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/cpf"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/colorBranco"
                    android:textColorHint="@color/colorBranco"/>

                <EditText
                    android:id="@+id/editTextDocRg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/rg"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/colorBranco"
                    android:textColorHint="@color/colorBranco"/>

                <EditText
                    android:id="@+id/editTextDocDataNascimento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="date"
                    android:hint="@string/data_nascimento"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/colorBranco"
                    android:textColorHint="@color/colorBranco"/>

                <EditText
                    android:id="@+id/editTextDocNomeMae"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/nome_da_mae"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/colorBranco"
                    android:textColorHint="@color/colorBranco"/>

                <EditText
                    android:id="@+id/editTextDocNaturalidade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="Naturalidade"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/colorBranco"
                    android:textColorHint="@color/colorBranco"/>

                <EditText
                    android:id="@+id/editTextDocDataEncontrado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="date"
                    android:hint="Data Que Você Encontrou"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/colorBranco"
                    android:textColorHint="@color/colorBranco"/>

                <EditText
                    android:id="@+id/editTextDocDescricao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:hint="@string/descri_o"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorBranco"
                    android:textColorHint="@color/colorBranco"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="170dp"
                        android:layout_height="110dp"
                        android:layout_margin="8dp"
                        android:background="@drawable/ic_image_black_24dp"
                        android:id="@+id/imageViewDocImagem1"
                        />

                    <ImageView
                        android:layout_width="170dp"
                        android:layout_height="110dp"
                        android:layout_margin="8dp"
                        android:background="@drawable/ic_image_black_24dp"
                        android:id="@+id/imageViewDocImagem2"
                        />

                </LinearLayout>



                <Button
                    android:id="@+id/buttonDocAdicionar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/adicionar"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="20dp"
                    android:textColor="@color/colorBranco"
                    android:background="@color/colorPrimaryDark"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>