<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.AcheiCartaoActivity">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cartao"
                    android:textSize="25sp"
                    android:textColor="@color/colorBranco"
                    android:textAlignment="center"
                    android:layout_marginTop="20dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_caixa_texto">



                    <TextView
                        android:id="@+id/textViewti"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tipo"
                        android:textSize="20sp"
                        android:textColor="@color/colorBranco"
                        android:textAlignment="textStart"
                        android:layout_marginTop="8dp"
                        />

                    <Spinner
                        android:id="@+id/spinnerAcheiCartao"
                        android:layout_width="280dp"
                        android:layout_height="30dp"
                        android:layout_gravity="right"
                        android:layout_marginTop="10dp"
                        android:scrollbarSize="20dp"
                        android:textAlignment="center"
                        android:layout_marginLeft="30dp"
                        />

                </LinearLayout>





                <EditText
                    android:id="@+id/editTextCarNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/nome_como_esta_no_cart_o"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/colorBranco"
                    android:textColorHint="@color/colorBranco"
                    android:background="@drawable/background_caixa_texto"/>

                <EditText
                    android:id="@+id/editTextCarBanco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="Banco / Emissor do Cartão"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/colorBranco"
                    android:textColorHint="@color/colorBranco"
                    android:background="@drawable/background_caixa_texto"/>

                <EditText
                    android:id="@+id/editTextCar4Digitos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="Ultimos 4 digitos do Cartão"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/colorBranco"
                    android:textColorHint="@color/colorBranco"
                    android:background="@drawable/background_caixa_texto"/>



                <TextView
                    android:id="@+id/textViewCarDataEncontrado1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Data encontrado"
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/colorBranco"
                    android:background="@drawable/background_caixa_texto"
                    >

                </TextView>


                <EditText
                    android:id="@+id/editTextCarDescricao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:hint="@string/descri_o"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/colorBranco"
                    android:textColorHint="@color/colorBranco"
                    android:background="@drawable/background_caixa_texto"
                    />

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:layout_margin="15dp"
                   android:orientation="horizontal"
                   >

                   <ImageView
                       android:layout_width="150dp"
                       android:layout_height="100dp"
                       android:layout_margin="15dp"
                       android:background="@drawable/background_caixa_texto"
                       android:id="@+id/imageViewCarImagem1"
                       android:src="@drawable/ic_image_black_24dp"
                       />

                   <ImageView
                       android:layout_width="150dp"
                       android:layout_height="100dp"
                       android:layout_margin="15dp"
                       android:background="@drawable/background_caixa_texto"
                       android:id="@+id/imageViewCarImagem2"
                       android:src="@drawable/ic_image_black_24dp"
                      />

               </LinearLayout>



                <Button
                    android:id="@+id/buttonCarAdicionar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/adicionar"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:marqueeRepeatLimit="10"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/colorBranco"
                    android:textSize="15sp"
                    android:background="@drawable/background_caixa_texto"
                    />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>